feat(*): add new GetFeatureInfo format for geojson